# Sandhika

./: .gitignore  CMakeLists.txt  README.md  SHA256SUMS  SPEC.md  health-reminder.desktop  health-reminder.service  install.sh  sandhika.desktop  sandhika.service  tree.txt  uninstall.sh
.github/workflows/: build.yml
AppDir/: AppRun  sandhika.desktop
AppDir/usr/lib/: libQt6Charts.so.6  libQt6OpenGLWidgets.so.6  libcurl-gnutls.so.4  libgcrypt.so.20  libgnutls.so.30  liblzma.so.5  libnghttp2.so.14  libpng16.so.16  libsystemd.so.0
config/: config.example.yaml
include/health_reminder/app/: application_controller.h
include/health_reminder/brightness/: brightness_controller.h
include/health_reminder/commands/: command_executor.h
include/health_reminder/config/: config_manager.h  config_types.h
include/health_reminder/dashboard/: dashboard_window.h
include/health_reminder/fullscreen/: fullscreen_detector.h
include/health_reminder/health/: health_score_calculator.h
include/health_reminder/idle/: idle_detector.h
include/health_reminder/notifications/: notification_manager.h  notification_window.h
include/health_reminder/scheduler/: reminder_scheduler.h
include/health_reminder/stats/: stats_manager.h
include/health_reminder/strict/: strict_break_window.h
include/health_reminder/tray/: system_tray_manager.h
include/sandhika/app/: application_controller.h
include/sandhika/brightness/: brightness_controller.h
include/sandhika/commands/: command_executor.h
include/sandhika/config/: config_manager.h  config_types.h
include/sandhika/dashboard/: dashboard_window.h
include/sandhika/health/: health_score_calculator.h
include/sandhika/idle/: idle_detector.h
include/sandhika/notifications/: notification_manager.h  notification_window.h
include/sandhika/scheduler/: reminder_scheduler.h
include/sandhika/stats/: stats_manager.h
include/sandhika/strict/: strict_break_window.h
include/sandhika/suppression/: suppression_manager.h
include/sandhika/tray/: system_tray_manager.h
squashfs-root/: .DirIcon  AppRun
src/: main.cpp
src/app/: application_controller.cpp
src/brightness/: brightness_controller.cpp
src/commands/: command_executor.cpp
src/config/: config_manager.cpp
src/dashboard/: dashboard_window.cpp
src/fullscreen/: fullscreen_detector.cpp
src/health/: health_score_calculator.cpp
src/idle/: idle_detector.cpp
src/notifications/: notification_manager.cpp  notification_window.cpp
src/scheduler/: reminder_scheduler.cpp
src/stats/: stats_manager.cpp
src/strict/: strict_break_dialog.h  strict_break_window.cpp
src/suppression/: suppression_manager.cpp
src/tray/: system_tray_manager.cpp
tests/: command_executor_test.cpp  config_manager_test.cpp  fullscreen_detector_test.cpp  gui_tests.cpp  health_score_test.cpp  idle_detector_test.cpp  reminder_scheduler_test.cpp  stats_manager_test.cpp  suppression_manager_test.cpp
